--- a/env.sample
+++ b/env.sample
@@ -2,8 +2,5 @@ HTTP_PORT=:8000
 HTTP_WORKERS=2
 LOG_LEVEL=debug
 
-MONGODB_PASSWORD=4PB2Qv2kWOeIKTKQ
-POSTGRES_PASSWORD=dbPassword
-POSTGRES_DB=inventory
-
 SECRET_KEY=secret-key
+MONGO_DB_URI=
